<resources>
    <string name="app_name">mMeals On Wheels</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="hint_phone_number">Enter 10 Digit Phone Number</string>
    <string name="hint_verification_code">Enter 6 Digit OTP</string>
    <string name="start_phone_auth">Send OTP</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend OTP</string>

    <string name="loading">Loading…</string>

    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="medicines">Medicines</string>
    <string name="fruits_and_vegetables">Fruits And Vegitables</string>
    <string name="daily_needs">Daily Needs</string>
    <string name="restaurent">Restaurent</string>
</resources>
